--- a/build.gradle
+++ b/build.gradle
@@ -15,14 +15,26 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
+configurations.all { exclude group: "commons-logging", module: "commons-logging" }
+
 dependencies {
+
+    def version = [
+        slf4j: '2.0.0-alpha1'
+        ,logback: '1.3.0-alpha5' 
+     ]
+
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
+
+    runtime "org.slf4j:jcl-over-slf4j:${version.slf4j}"
+    compile "ch.qos.logback:logback-classic:${version.logback}"
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
